# python-project-174

./: README.md  demo2_2.cast  demo2_3.cast  demo2_4.cast  demo2_5.cast  demo2_6.cast  pyproject.toml
gendiff/: __init__.py  diff_builder.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
