[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    {name = "mauricio23",email = "anmauri93@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
  { include = "gendiff" },
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
